2008-06-09  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	imap search fixes

2008-04-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	force headervalues into the database charset

2008-03-24  Paul J Stevens <paul@nfg.nl>

	* debian/control, debian/dbmail.config, debian/rules:
	debian updates
	* VERSION, debian/changelog, debian/control, debian/dbmail.postrm:
	v2.2.10

2008-03-15  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.10-rc2
	* modules/authsql.c:
	always treat deliver_to as string type in queries (bug: #676)
	* sql/mysql/create_tables.mysql:
	cleanup the mysql schema

2008-03-07  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.10-rc1

2008-03-05  Paul J Stevens <paul@nfg.nl>

	* man/dbmail-imapd.txt:
	adjust manpage dbmail-imapd after asciidoc update
	* README.usermap:
	update README for usermap
	* db.c, misc.c:
	fix the usermap logic
	* dbmail-message.c:
	rebuild grelation headercache

2008-03-04  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	make internal grelation table of headers case insensitive

2008-02-09  Paul J Stevens <paul@nfg.nl>

	* VERSION, debian/changelog, debian/po/ja.po, imap4.c, timsieve.c:
	version 2.2.9
	* db.c:
	prevent regression in icheck_physmessages
	* debian/po/ja.po:
	update japanese debian po file

2008-01-21  Paul J Stevens <paul@nfg.nl>

	* db.c:
	use outer join instead of subselect during icheck_physmessages

2008-01-20  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_message.c, dbmail-mailbox.c:
	do from escaping during export
	* dbmail-message.c:
	allocate less and fix firstline logic

2008-01-20  Paul J Stevens <paul@nfg.nl>

	* VERSION, debian/changelog:
	2.2.9rc1
	* dbmail-message.c:
	prevent possible segfault

2008-01-19  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	call register_header from dbmail_message_set_header (aaron)

2008-01-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	make body searches case-sensitive to accomodate postgresql

2008-01-07  Paul J Stevens <paul@nfg.nl>
